--- a/src/casino/vista/VentanaConfiguracion.form
+++ b/src/casino/vista/VentanaConfiguracion.form
@@ -321,7 +321,7 @@
     </Component>
     <Component class="javax.swing.JButton" name="btnIniciarJuego">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Inciar Juego"/>
+        <Property name="text" type="java.lang.String" value="Iniciar Juego"/>
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnIniciarJuegoActionPerformed"/>
